--- a/Reinigungsverwaltung.csproj
+++ b/Reinigungsverwaltung.csproj
@@ -15,8 +15,14 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+      <PackageReference Include="Model" Version="1.0.0" />
+      <PackageReference Include="xunit" Version="2.4.2" />
       <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
       <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="Reinigungsverwaltung.Tests\Reinigungsverwaltung.Tests.csproj" />
     </ItemGroup>
 
 </Project>
